package buildrun.roadeye.rest.dto;

public record AddressActivateDisableDto(Long idAddress) {
}
