package buildrun.roadeye.rest.dto;

public record AddressCoordinatesDto(double latitude, double longitude) {
}
